--- a/package.json
+++ b/package.json
@@ -6,5 +6,6 @@
   "repository": "https://github.com/YouScience/code-challenge",
   "author": "Brandon Allred <brandon.allred@youscience.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {}
 }
