--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
   "author": "Brandon Allred <brandon.allred@youscience.com>",
   "license": "MIT",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
