--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.33.1",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "yup": "^0.32.11"
   },
@@ -54,8 +55,9 @@
     "webpack-dev-server": "^4.9.2"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "start": "cross-env NODE_ENV=development webpack-dev-server",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
     "start:debug": "cross-env NODE_ENV=development --debug-webpack",
     "test:ci": "jest --ci --no-cache --runInBand --reporters='default'",
     "test:related": "jest --bail --passWithNoTests —-findRelatedTests",
